added nav, header img, viewport meta tag, margin , buttons

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,25 @@
 // Navigation Styles here
+
+header{
+    .nav-title{
+        display: flex;
+        align-items: baseline;
+        justify-content: space-between;
+        margin: 2rem 0;
+        .navigation{
+            width:300px;
+            nav{
+                display: flex;
+                justify-content: space-around;
+                a{
+                    line-height: 1.5;
+                    font-size: 1.6rem;
+                    padding-bottom: 10px;
+                    text-decoration: none;
+                    color: black;
+                    
+                }
+            }
+        }
+    }//closes nav-title container
+}//closes header
