--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,14 @@
 .home {
 
+  header{
+    .img-content{
+      img{
+        margin: 0 0 2rem 0;
+        border-radius: 10px;
+      }
+    }
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
@@ -56,6 +65,17 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      .btn{
+
+       button{
+        background-color: #008080;
+        border-color: none;
+        text-decoration: none;
+        color: white;
+        border-radius: 10px;
+        padding: 10px 50px;
+       }//closes button tag
+      }//closes btn 
     }
   }
 }// home
