--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,7 +5,8 @@ header{
         display: flex;
         align-items: baseline;
         justify-content: space-between;
-        margin: 2rem 0;
+        margin: 2rem 0 0 0;
+        border-bottom: 2px dashed @navigation-border;
         .navigation{
             width:300px;
             nav{
