--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,20 @@
 // Mixins in here
+
+.button(@bg-color,@padding:1rem 3rem){
+    button{
+        background-color: @bg-color;
+        border-color: none;
+        text-decoration: none;
+        color: white;
+        border-radius: 1rem;
+        padding: 1rem 5rem;
+
+        &:hover {
+            background-color: lighten(@bg-color, 10%);
+          }
+        
+        @media @phone {
+            padding: @padding;
+        }
+    }
+}
