--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,40 +1,66 @@
 .home {
 
-  header{
-    .img-content{
-      img{
-        margin: 0 0 2rem 0;
-        border-radius: 10px;
-      }
-    }
-  }
-
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
+    @media @phone {
+      flex-direction: column;
+      align-content: center;
+      margin: 5%;
+    }
+
     .text-content {
       width: 48%;
       padding-right: 1%;
+
+      @media @phone {
+        width: 100%;
+      }
+
+      //closes media
     }
+
+    //closes text-section
 
     .img-content {
       width: 48%;
       padding-left: 1%;
 
+      @media @phone {
+        width: 100%;
+      }
+
+      //closes media
+
       img {
         border-radius: 10px;
+
+        @media @phone {
+          width: 100%;
+        }
+
+        //closes media
       }
+
+      //closes img
     }
+
+    //closes img-content
   }
+
+  //closes content section
 
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+
+    @media @phone {
+      flex-direction: column-reverse;
+      align-content: center;
+    }
 
     .text-content {
       padding-left: 1%;
@@ -70,21 +96,25 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
-      
+
       @media @phone {
-      width: 100%;
-      margin: 1rem 0;
-      padding: 0 5rem;
- 
+        width: 100%;
+        margin: 1rem 0;
+        padding: 0 5rem;
+
       }
 
-      .btn{
+      .btn {
         .button(@eastern-blue);
 
         @media @phone {
-          .button(@eastern-blue,1.5rem 15rem)
+          .button(@eastern-blue, 1.5rem 15rem)
         }
-      }//closes btn 
+      }
+
+      //closes btn 
     }
   }
-}// home
+}
+
+// home
