--- a/css/index.css
+++ b/css/index.css
@@ -211,19 +211,32 @@ header .nav-title .navigation nav a {
 header .nav-title .navigation nav a:hover {
   color: #1fc8e3;
 }
+header .img-content {
+  padding: 0 5%;
+}
 @media ( max-width: 500px )  {
   header .img-content {
     width: 90%;
     margin: 0 5% 5%;
+    padding: 0 0.1%;
   }
 }
 header .img-content img {
   margin: 0 0 2rem 0;
 }
 @media ( max-width: 500px )  {
+  header .img-content img {
+    margin: 0;
+  }
+}
+header .text-content {
+  padding: 0 5%;
+}
+@media ( max-width: 500px )  {
   header .text-content {
     width: 90%;
     margin: 5%;
+    padding: 0 0.1%;
   }
 }
 .footer {
@@ -242,12 +255,14 @@ header .img-content img {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  padding: 0 5%;
 }
 @media ( max-width: 500px )  {
   .home .content-section {
     flex-direction: column;
     align-content: center;
     margin: 5%;
+    padding: 0 0.1%;
   }
 }
 .home .content-section .text-content {
@@ -298,8 +313,20 @@ header .img-content img {
   width: 75%;
   margin: 0 auto 30px;
 }
+@media ( max-width: 500px )  {
+  .home .content-destination {
+    width: 100%;
+    margin: 5%;
+    padding: 0 0.1%;
+  }
+}
 .home .content-destination img {
   border-radius: 10px;
+}
+@media ( max-width: 500px )  {
+  .home .content-destination img {
+    width: 90%;
+  }
 }
 .home .content-pick {
   padding-top: 30px;
@@ -331,6 +358,7 @@ header .img-content img {
   color: white;
   border-radius: 1rem;
   padding: 1rem 5rem;
+  font-size: 1.6rem;
 }
 .home .content-pick .destination .btn button:hover {
   background-color: #1fc8e3;
@@ -348,6 +376,7 @@ header .img-content img {
     color: white;
     border-radius: 1rem;
     padding: 1rem 5rem;
+    font-size: 1.7rem;
   }
   .home .content-pick .destination .btn button:hover {
     background-color: #1fc8e3;
@@ -355,6 +384,6 @@ header .img-content img {
 }
 @media ( max-width: 500px )  and ( max-width: 500px )  {
   .home .content-pick .destination .btn button {
-    padding: 1.5rem 15rem;
+    padding: 1rem 15rem;
   }
 }
