--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,6 +1,6 @@
 // Mixins in here
 
-.button(@bg-color,@padding:1rem 3rem){
+.button(@bg-color,@padding:1rem 3rem,@font-size:1.6rem){
     button{
         background-color: @bg-color;
         border-color: none;
@@ -8,6 +8,7 @@
         color: white;
         border-radius: 1rem;
         padding: 1rem 5rem;
+        font-size: @font-size;
 
         &:hover {
             background-color: lighten(@bg-color, 10%);
