--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,7 @@
 // Navigation Styles here
 
 header {
+    
     .nav-title {
         display: flex;
         align-items: baseline;
@@ -54,20 +55,28 @@ header {
     //closes nav-title container
 
     .img-content {
+        padding: @padding-lr;
         @media @phone{
             width: 90%;
             margin: 0 5% 5%;
+            padding: @padding-lr-phone;
         }
 
         img {
           margin: 0 0 2rem 0;
+
+          @media @phone{
+            margin: 0;
+        }
         }
     }//closes .img-content
 
     .text-content{
+        padding: @padding-lr;
         @media @phone{
             width: 90%;
             margin: 5%;
+            padding: @padding-lr-phone;
         }
 
     }
