covereted all px to rem

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,7 +7,7 @@ header {
         align-items: baseline;
         justify-content: space-between;
         margin: 2rem 0 0 0;
-        border-bottom: 2px dashed @navigation-border;
+        border-bottom: .2rem dashed @navigation-border;
 
         @media @phone {
             flex-direction: column;
@@ -26,7 +26,7 @@ header {
           }//closes .title
 
         .navigation {
-            width: 300px;
+            width: 30rem;
             @media @phone {
                 width: 100%;
               }//closes media
