--- a/css/index.css
+++ b/css/index.css
@@ -173,7 +173,7 @@ header .nav-title {
   align-items: baseline;
   justify-content: space-between;
   margin: 2rem 0 0 0;
-  border-bottom: 2px dashed #C0C0C0;
+  border-bottom: 0.2rem dashed #C0C0C0;
 }
 @media ( max-width: 500px )  {
   header .nav-title {
@@ -190,7 +190,7 @@ header .nav-title {
   }
 }
 header .nav-title .navigation {
-  width: 300px;
+  width: 30rem;
 }
 @media ( max-width: 500px )  {
   header .nav-title .navigation {
@@ -251,7 +251,7 @@ header .text-content {
   padding: 20px;
 }
 .home .content-section {
-  margin: 30px 0;
+  margin: 3rem 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -292,8 +292,8 @@ header .text-content {
   }
 }
 .home .inverse-content {
-  padding-bottom: 30px;
-  border-bottom: 2px dashed #C0C0C0;
+  padding-bottom: 3rem;
+  border-bottom: 0.2rem dashed #C0C0C0;
 }
 @media ( max-width: 500px )  {
   .home .inverse-content {
@@ -311,7 +311,7 @@ header .text-content {
 }
 .home .content-destination {
   width: 75%;
-  margin: 0 auto 30px;
+  margin: 0 auto 3rem;
 }
 @media ( max-width: 500px )  {
   .home .content-destination {
@@ -321,7 +321,7 @@ header .text-content {
   }
 }
 .home .content-destination img {
-  border-radius: 10px;
+  border-radius: 1rem;
 }
 @media ( max-width: 500px )  {
   .home .content-destination img {
@@ -329,8 +329,8 @@ header .text-content {
   }
 }
 .home .content-pick {
-  padding-top: 30px;
-  border-top: 2px dashed #C0C0C0;
+  padding-top: 3rem;
+  border-top: 0.2rem dashed #C0C0C0;
   display: flex;
   justify-content: space-between;
 }
@@ -342,7 +342,7 @@ header .text-content {
 }
 .home .content-pick .destination {
   width: 30%;
-  margin-bottom: 30px;
+  margin-bottom: 3rem;
 }
 @media ( max-width: 500px )  {
   .home .content-pick .destination {
