--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,7 @@
 .home {
 
   .content-section {
-    margin: 30px 0;
+    margin: 3rem 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -56,8 +56,8 @@
   //closes content section
 
   .inverse-content {
-    padding-bottom: 30px;
-    border-bottom: 2px dashed @navigation-border;
+    padding-bottom: 3rem;
+    border-bottom: .2rem dashed @navigation-border;
 
     @media @phone {
       flex-direction: column-reverse;
@@ -77,7 +77,7 @@
 
   .content-destination {
     width: 75%;
-    margin: 0 auto 30px;
+    margin: 0 auto 3rem;
 
     @media @phone {
       width: 100%;
@@ -86,7 +86,7 @@
     }//closes media
 
     img {
-      border-radius: 10px;
+      border-radius: 1rem;
 
       @media @phone {
         width: 90%;
@@ -95,8 +95,8 @@
   }
 
   .content-pick {
-    padding-top: 30px;
-    border-top: 2px dashed @navigation-border;
+    padding-top: 3rem;
+    border-top: .2rem dashed @navigation-border;
     display: flex;
     justify-content: space-between;
 
@@ -108,7 +108,7 @@
 
     .destination {
       width: 30%;
-      margin-bottom: 30px;
+      margin-bottom: 3rem;
 
       @media @phone {
         width: 100%;
