renamed phone to mobile

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -7,7 +7,7 @@
     justify-content: space-between;
     padding: @padding-lr;
 
-    @media @phone {
+    @media @mobile {
       flex-direction: column;
       align-content: center;
       margin: 5%;
@@ -18,7 +18,7 @@
       width: 48%;
       padding-right: 1%;
 
-      @media @phone {
+      @media @mobile {
         width: 100%;
       }
 
@@ -31,7 +31,7 @@
       width: 48%;
       padding-left: 1%;
 
-      @media @phone {
+      @media @mobile {
         width: 100%;
       }
 
@@ -40,7 +40,7 @@
       img {
         border-radius: 10px;
 
-        @media @phone {
+        @media @mobile {
           width: 100%;
         }
 
@@ -59,7 +59,7 @@
     padding-bottom: 3rem;
     border-bottom: .2rem dashed @navigation-border;
 
-    @media @phone {
+    @media @mobile {
       flex-direction: column-reverse;
       align-content: center;
     }
@@ -79,7 +79,7 @@
     width: 75%;
     margin: 0 auto 3rem;
 
-    @media @phone {
+    @media @mobile {
       width: 100%;
       margin: 5%;
       padding: @padding-lr-phone;
@@ -88,7 +88,7 @@
     img {
       border-radius: 1rem;
 
-      @media @phone {
+      @media @mobile {
         width: 90%;
       }//closes media
     }
@@ -100,7 +100,7 @@
     display: flex;
     justify-content: space-between;
 
-    @media @phone {
+    @media @mobile {
       flex-direction: column;
       align-items: center;
       
@@ -110,7 +110,7 @@
       width: 30%;
       margin-bottom: 3rem;
 
-      @media @phone {
+      @media @mobile {
         width: 100%;
         margin: 1rem 0;
         padding: 0 5rem;
@@ -120,7 +120,7 @@
       .btn {
         .button(@eastern-blue);
 
-        @media @phone {
+        @media @mobile {
           .button(@eastern-blue, 1rem 15rem, 1.7rem);
         }
       }
