--- a/less/mixins.less
+++ b/less/mixins.less
@@ -14,7 +14,7 @@
             background-color: lighten(@bg-color, 10%);
           }
         
-        @media @phone {
+        @media @mobile {
             padding: @padding;
         }
     }
