--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,7 +9,7 @@ header {
         margin: 2rem 0 0 0;
         border-bottom: .2rem dashed @navigation-border;
 
-        @media @phone {
+        @media @mobile {
             flex-direction: column;
             align-items: stretch;
             width: 100%;
@@ -17,7 +17,7 @@ header {
 
         .title{
             h1{
-              @media @phone {
+              @media @mobile {
                 font-size: 3.2rem;
                 margin: 0 0 1% 0;
                 text-align: center;
@@ -27,7 +27,7 @@ header {
 
         .navigation {
             width: 30rem;
-            @media @phone {
+            @media @mobile {
                 width: 100%;
               }//closes media
 
@@ -56,7 +56,7 @@ header {
 
     .img-content {
         padding: @padding-lr;
-        @media @phone{
+        @media @mobile{
             width: 90%;
             margin: 0 5% 5%;
             padding: @padding-lr-phone;
@@ -65,7 +65,7 @@ header {
         img {
           margin: 0 0 2rem 0;
 
-          @media @phone{
+          @media @mobile{
             margin: 0;
         }
         }
@@ -73,7 +73,7 @@ header {
 
     .text-content{
         padding: @padding-lr;
-        @media @phone{
+        @media @mobile{
             width: 90%;
             margin: 5%;
             padding: @padding-lr-phone;
