fixed nesting alignment

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -83,14 +83,18 @@
       width: 100%;
       margin: 5%;
       padding: @padding-lr-phone;
-    }//closes media
+    }
+
+    //closes media
 
     img {
       border-radius: 1rem;
 
       @media @mobile {
         width: 90%;
-      }//closes media
+      }
+
+      //closes media
     }
   }
 
@@ -103,7 +107,7 @@
     @media @mobile {
       flex-direction: column;
       align-items: center;
-      
+
     }
 
     .destination {
